--- a/src/main/resources/assets/modforlazypeople/lang/en_us.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_us.json
@@ -147,5 +147,7 @@
 
   "mflp.failedToConnectScreen.title": "Failed to connect to MFLP Network",
   "mflp.failedToConnectScreen.description": "This is either because the servers are down, or you aren't connected to the internet.",
-  "mflp.failedToConnectScreen.reconnectionText": "To reconnect, either use the button below, /mflpnet reconnect, or the button in the settings screen."
+  "mflp.failedToConnectScreen.reconnectionText": "To reconnect, either use the button below, /mflpnet reconnect, or the button in the settings screen.",
+  "mflp.mainConfig.connected.tooltip": "You are connected to the MFLP network.",
+  "mflp.mainConfig.disconnected.tooltip": "You are not connected to the MFLP network."
 }
