--- a/src/main/resources/assets/modforlazypeople/lang/en_us.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_us.json
@@ -131,6 +131,9 @@
   "mflp.party.playerJoined": "%s has joined the party!",
   "mflp.party.playerRemoved": "%s was removed from the party!",
   "mflp.party.playerLeft": "%s has left the party!",
+  "mflp.party.playerDemoted": "%s was demoted.",
+  "mflp.party.playerPromoted": "%s was promoted.",
+  "mflp.party.playerDeclined": "%s declined their invite.",
   "mflp.party.clientInvited.title": "%s invited you to their party!",
   "mflp.party.clientInvited.description": "Use /party accept or /party decline to accept or decline the invite!",
   "mflp.party.playerInvited": "%s was invited to the party!",
@@ -149,8 +152,5 @@
   "mflp.failedToConnectScreen.description": "This is either because the servers are down, or you aren't connected to the internet.",
   "mflp.failedToConnectScreen.reconnectionText": "To reconnect, either use the button below, /mflpnet reconnect, or the button in the settings screen.",
   "mflp.mainConfig.connected.tooltip": "You are connected to the MFLP network.",
-  "mflp.mainConfig.disconnected.tooltip": "You are not connected to the MFLP network.",
-  "mflp.party.playerDemoted": "%s was demoted.",
-  "mflp.party.playerPromoted": "%s was promoted.",
-  "mflp.party.playerDeclined": "%s declined their invite."
+  "mflp.mainConfig.disconnected.tooltip": "You are not connected to the MFLP network."
 }
