--- a/src/main/resources/assets/modforlazypeople/lang/en_us.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_us.json
@@ -156,5 +156,10 @@
   "mflp.failedToConnectScreen.description": "This is either because the servers are down, or you aren't connected to the internet.",
   "mflp.failedToConnectScreen.reconnectionText": "To reconnect, either use the button below, /mflpnet reconnect, or the button in the settings screen.",
   "mflp.mainConfig.connected.tooltip": "You are connected to the MFLP network.",
-  "mflp.mainConfig.disconnected.tooltip": "You are not connected to the MFLP network."
+  "mflp.mainConfig.disconnected.tooltip": "You are not connected to the MFLP network.",
+  
+  "mflp.net.reconnect.failure": "MFLP > Failed to reconnect!",
+  "mflp.net.reconnect.success": "MFLP > Connection succeeded!",
+  "mflp.net.status.notConnected": "MFLP > You are NOT connected to the MFLP server!",
+  "mflp.net.status.connected": "MFLP > You are connected to the MFLP server!"
 }
