Fixed minor bugs, added notifications, added translations for errors

--- a/src/main/resources/assets/modforlazypeople/lang/en_us.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_us.json
@@ -163,5 +163,30 @@
   "mflp.net.reconnect.failure": "MFLP > Failed to reconnect!",
   "mflp.net.reconnect.success": "MFLP > Connection succeeded!",
   "mflp.net.status.notConnected": "MFLP > You are NOT connected to the MFLP server!",
-  "mflp.net.status.connected": "MFLP > You are connected to the MFLP server!"
+  "mflp.net.status.connected": "MFLP > You are connected to the MFLP server!",
+
+  "mflp.error.unexpected.title": "A error occurred!",
+  "mflp.error.unexpected.description": "A unknown error has occurred!",
+  "mflp.error.noPendingInvite.title": "You do not have a pending invite!",
+  "mflp.error.noPendingInvite.description": "Please make sure a party moderator has invited you.",
+  "mflp.error.noPermission.title": "You do not have the permissions to do that!",
+  "mflp.error.noPermission.description": "You do not have the permissions to run that command.",
+  "mflp.error.invalidPlayer.title": "This player is not known!",
+  "mflp.error.invalidPlayer.description": "Make sure that the username is properly entered",
+  "mflp.error.playerOffline.title": "This player is not online!",
+  "mflp.error.playerOffline.description": "Make sure the player you are trying to invite is online.",
+  "mflp.error.playerInParty.title": "You are already in a party!",
+  "mflp.error.playerInParty.description": "Run /party leave to leave your current party.",
+  "mflp.error.selfInvite.title": "You are trying to invite yourself!",
+  "mflp.error.selfInvite.description": "You cannot invite yourself to a party.",
+  "mflp.error.notInParty.title": "You are not in a party!",
+  "mflp.error.notInParty.description": "Please make sure you are in a party before executing commands.",
+  "mflp.error.invalidParty.title": "This party does not exist!",
+  "mflp.error.invalidParty.description": "Please make sure this party still exists.",
+  "mflp.error.unsupportedOperation.title": "This operation is invalid!",
+  "mflp.error.unsupportedOperation.description": "Make sure you are sending the proper commands.",
+  "mflp.error.notConnected.title": "You are not connected to the MFLP network!",
+  "mflp.error.notConnected.description": "Use /mflpnet reconnect or use the MFLP screen to reconnect.",
+  "mflp.error.lostConnection.title": "You have lost the connection to the MFLP network!",
+  "mflp.error.lostConnection.description": "use /mflpnet reconnect or use the MFLP screen to reconnect."
 }
