--- a/src/main/resources/assets/modforlazypeople/lang/en_us.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_us.json
@@ -95,6 +95,15 @@
   "mflp.macroSettings.addCommandButton": "Add Command",
   "mflp.macroSettings.command": "Command",
   "mflp.macro.noMacrosAdded": "No Macros Added!",
+  "mflp.macroSettings.anyWorld": "Any",
+  "mflp.macroSettings.spOnly": "Single player only",
+  "mflp.macroSettings.serverSpecific": "Server specific",
+  "mflp.macroSettings.mpOnly": "Multiplayer only",
+  "mflp.macroSettings.worldOptionButton": "World specific macro: ",
+  "mflp.macroSettings.worldOptionButton.tooltip": "Select where the macro should work, anywhere, in single player only, on specific servers or only in multiplayer.",
+  "mflp.macroSettings.worldOptionTextField": "List of servers: ",
+  "mflp.macroSettings.worldOptionTextField.tooltip": "Enter the ips of the server's you want the macro to work on in Server specific mode. Use spaces to separate",
+  "mflp.macroConfigScreen.title": "Configure macros",
 
   "mflp.autoReply.noAutoRepliesAdded": "No Auto Replies Added!",
   "mflp.autoReplyConfigScreen.keywords": "Keywords",
