Fixed up some stuff with easy msg

--- a/src/main/resources/assets/modforlazypeople/lang/en_us.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_us.json
@@ -87,7 +87,7 @@
   "mflp.setting.nametagIconToggle.tooltip": "Toggles whether to show the MFLP icon in the players nametag.",
 
   "mflp.setting.easyMsgSetting.name": "Easy msg",
-  "mflp.setting.easyMsgSetting.tooltip": "A toggle for the easy msg setting, which automatically inputs /msg if you got a direct message in the last 20 seconds.",
+  "mflp.setting.easyMsgSetting.tooltip": "A toggle for the easy msg setting, which automatically inputs /msg if you got a direct message in the last 20 seconds. Also works for party chat.",
 
   "mflp.setting.serverDisconnectionAction.name": "Disconnection Action",
   "mflp.setting.serverDisconnectionAction.tooltip": "What MFLP should do whenever you get disconnected from the MFLP network.",
