--- a/src/main/resources/assets/modforlazypeople/lang/en_us.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_us.json
@@ -109,19 +109,19 @@
   "mflp.setting.railUpdates.tooltip": "Shows the update range of the powered rail or activator rail you are looking at.",
 
   "mflp.setting.dustUpdateColor.name": "Dust update color",
-  "mflp.setting.dustUpdateColor.tooltip": "What color the boxes indicating the update radius of a dust are.",
+  "mflp.setting.dustUpdateColor.tooltip": "What color the boxes indicating the update radius of a dust are. Format is Hexadecimal, AARRGGBB (ARGB)",
 
   "mflp.setting.repeaterUpdateColor.name": "Repeater update color",
-  "mflp.setting.repeaterUpdateColor.tooltip": "What color the boxes indicating the update radius of a repeater are.",
+  "mflp.setting.repeaterUpdateColor.tooltip": "What color the boxes indicating the update radius of a repeater are. Format is Hexadecimal, AARRGGBB (ARGB)",
 
   "mflp.setting.comparatorUpdateColor.name": "Comparator update color",
-  "mflp.setting.comparatorUpdateColor.tooltip": "What color the boxes indicating the update radius of a comparator are.",
+  "mflp.setting.comparatorUpdateColor.tooltip": "What color the boxes indicating the update radius of a comparator are. Format is Hexadecimal, AARRGGBB (ARGB)",
 
   "mflp.setting.observerUpdateColor.name": "Observer update color",
-  "mflp.setting.observerUpdateColor.tooltip": "What color the boxes indicating the update radius of a observer are.",
+  "mflp.setting.observerUpdateColor.tooltip": "What color the boxes indicating the update radius of a observer are. Format is Hexadecimal, AARRGGBB (ARGB)",
 
   "mflp.setting.railUpdateColor.name": "Rails update color",
-  "mflp.setting.railUpdateColor.tooltip": "What color the boxes indicating the update radius of a rail are.",
+  "mflp.setting.railUpdateColor.tooltip": "What color the boxes indicating the update radius of a rail are. Format is Hexadecimal, AARRGGBB (ARGB)",
 
   "mflp.setting.serverDisconnectionAction.name": "Disconnection Action",
   "mflp.setting.serverDisconnectionAction.tooltip": "What MFLP should do whenever you get disconnected from the MFLP network.",
