--- a/src/main/resources/assets/modforlazypeople/lang/en_us.json
+++ b/src/main/resources/assets/modforlazypeople/lang/en_us.json
@@ -149,32 +149,33 @@
   "mflp.setting.freeCamWalkingMode.noClip": "No Clip",
   "mflp.setting.freeCamWalkingMode.walk": "Walk",
 
-  "mflp.setting.freeCamPostProcessor.name": "Free Cam Shader",
-  "mflp.setting.freeCamPostProcessor.none": "None",
-  "mflp.setting.freeCamPostProcessor.shaders/post/notch.json": "Notch",
-  "mflp.setting.freeCamPostProcessor.shaders/post/fxaa.json":"FXAA",
-  "mflp.setting.freeCamPostProcessor.shaders/post/art.json": "Art",
-  "mflp.setting.freeCamPostProcessor.shaders/post/bumpy.json":"Bumpy",
-  "mflp.setting.freeCamPostProcessor.shaders/post/blobs2.json": "Blobs2",
-  "mflp.setting.freeCamPostProcessor.shaders/post/pencil.json":"Pencil",
-  "mflp.setting.freeCamPostProcessor.shaders/post/color_convolve.json": "Color Convolve",
-  "mflp.setting.freeCamPostProcessor.shaders/post/deconverge.json":"Deconverge",
-  "mflp.setting.freeCamPostProcessor.shaders/post/flip.json": "Flip",
-  "mflp.setting.freeCamPostProcessor.shaders/post/invert.json":"Invert (enderman)",
-  "mflp.setting.freeCamPostProcessor.shaders/post/ntsc.json": "NTSC",
-  "mflp.setting.freeCamPostProcessor.shaders/post/outline.json":"Outline",
-  "mflp.setting.freeCamPostProcessor.shaders/post/phosphor.json": "Phosphor",
-  "mflp.setting.freeCamPostProcessor.shaders/post/scan_pincushion.json":"Scan Pincushion",
-  "mflp.setting.freeCamPostProcessor.shaders/post/sobel.json": "Sobel",
-  "mflp.setting.freeCamPostProcessor.shaders/post/bits.json":"Bits",
-  "mflp.setting.freeCamPostProcessor.shaders/post/desaturate.json": "Desaturate",
-  "mflp.setting.freeCamPostProcessor.shaders/post/green.json":"Green",
-  "mflp.setting.freeCamPostProcessor.shaders/post/blur.json": "Blur",
-  "mflp.setting.freeCamPostProcessor.shaders/post/wobble.json":"Wobble",
-  "mflp.setting.freeCamPostProcessor.shaders/post/blobs.json": "Blobs",
-  "mflp.setting.freeCamPostProcessor.shaders/post/antialias.json":"Anti Alias",
-  "mflp.setting.freeCamPostProcessor.shaders/post/creeper.json": "Creeper",
-  "mflp.setting.freeCamPostProcessor.shaders/post/spider.json":"Spider",
+  "mflp.setting.postProcessor.name": "Shader",
+  "mflp.setting.postProcessor.tooltip": "Adds back the \"Super Secret Settings\" which you can toggle in here (even includes enderman, spider and creeper shaders)",
+  "mflp.setting.postProcessor.none": "None",
+  "mflp.setting.postProcessor.shaders/post/notch.json": "Notch",
+  "mflp.setting.postProcessor.shaders/post/fxaa.json":"FXAA",
+  "mflp.setting.postProcessor.shaders/post/art.json": "Art",
+  "mflp.setting.postProcessor.shaders/post/bumpy.json": "Bumpy",
+  "mflp.setting.postProcessor.shaders/post/blobs2.json": "Blobs2",
+  "mflp.setting.postProcessor.shaders/post/pencil.json": "Pencil",
+  "mflp.setting.postProcessor.shaders/post/color_convolve.json": "Color Convolve",
+  "mflp.setting.postProcessor.shaders/post/deconverge.json": "Deconverge",
+  "mflp.setting.postProcessor.shaders/post/flip.json": "Flip",
+  "mflp.setting.postProcessor.shaders/post/invert.json": "Invert (enderman)",
+  "mflp.setting.postProcessor.shaders/post/ntsc.json": "NTSC",
+  "mflp.setting.postProcessor.shaders/post/outline.json": "Outline",
+  "mflp.setting.postProcessor.shaders/post/phosphor.json": "Phosphor",
+  "mflp.setting.postProcessor.shaders/post/scan_pincushion.json": "Scan Pincushion",
+  "mflp.setting.postProcessor.shaders/post/sobel.json": "Sobel",
+  "mflp.setting.postProcessor.shaders/post/bits.json": "Bits",
+  "mflp.setting.postProcessor.shaders/post/desaturate.json": "Desaturate",
+  "mflp.setting.postProcessor.shaders/post/green.json": "Green",
+  "mflp.setting.postProcessor.shaders/post/blur.json": "Blur",
+  "mflp.setting.postProcessor.shaders/post/wobble.json": "Wobble",
+  "mflp.setting.postProcessor.shaders/post/blobs.json": "Blobs",
+  "mflp.setting.postProcessor.shaders/post/antialias.json": "Anti Alias",
+  "mflp.setting.postProcessor.shaders/post/creeper.json": "Creeper",
+  "mflp.setting.postProcessor.shaders/post/spider.json": "Spider",
 
   "mflp.setting.resetButton.name": "Reset",
   "mflp.setting.resetButton.tooltip": "Sets the field to the default value.",
